--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: meganboudreau21@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   SimpleTrack is an app that allows you to define and track anything you want.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "simpletrack-site" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: megboudreau
 github_username:  megboud
 
